# www

./: .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  .vale  .vale.ini  .vale.newsletter.ini  .yamllint.yaml  AGENTS.md  AUTHORS  BOARD-OFFSITE-BRIEF.md  CHANGELOG  CONTEXT-AND-OPPORTUNITIES.md  CONTRIBUTING.md  DECISIONS-AND-ROADMAP.md  DRAFT-ai-and-docs-pov.md  EXTERNAL-CONTEXT.md  Gemfile  IMPROVEMENTS-REPORT.md  LICENSE  MARKETING-REPORT.md  Makefile  README.md  README.rst  STRATEGY-PACK.md  STRATEGY.md  conf.py  dockerfile  export_videos.py  gulpfile.js  index.md  index.rst  interesting.rst  mkdocs.yml  newsletter-november-2019.rst  package-lock.json  package.json  (+10 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  ensure-local-compose.sh
.github/: CODEOWNERS  dependabot.yml
.planning/: python-312-migration-plan.md
codespell/: ignore.txt
conference/: index.rst
docs/: Makefile  Pipfile  about-us.rst  bipoc.rst  book.rst  books.rst  code-of-conduct-reporting.rst  code-of-conduct-response.md  code-of-conduct-response.rst  code-of-conduct-shortform-meetups.rst  code-of-conduct.md  code-of-conduct.rst  community.rst  conf.py  conference.md  contact.rst  documentarians.md  documentarians.rst  get-slugs.sh  guide.rst  index.md  index.rst  interesting.rst  job-board.rst  make.bat  makecsv.sh  meetups.md  newsletter.rst  origin-story.rst  originStory.rst  podcast.rst  site-map.rst  slack.rst  spelling_wordlist.txt  starting.rst  style-guide.rst  team.rst  test.rst  topics.rst  videos.md  (+1 more)
(+2920 files in other folders)
